--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -739,8 +739,10 @@ With access to the \textsc{OPAL} forward solver the framework is able to
   define optimization problems within an input file, requiring no 
   additional knowledge or installation of the API to use it.
 
-By abiding to the API from Listing 3 it becomes trivial to add new forward
-  solvers to the framework (see Appendix A).
+% AA: this is too much for Phys Rev. AB  
+% By abiding to the API from Listing 3 it becomes trivial to add new forward
+% solvers to the framework (see Appendix A).
+
 If the objectives and constraints are simple arithmetical expressions, the
   \texttt{FunctionEvaluator} simulator can be used.
 Using functors and the default expression primitives already powerful
@@ -852,122 +854,125 @@ The authors thank the \textsc{SwissFEL} and AWA teams for contributing to the
   This work was partly supported by the 
   U.S. Department of Energy, Office of Science, under 
   contract number DE-AC02-06CH11357 and grant number DE-SC0015479. 
-\appendix
 
-\section{Forward Solver Implementation}
+% AA: this is too much for Phys Rev. AB  
 
-A simple implementation, e.g.\ using a Python forward solver, is given below
-  in Listing 6.
-We assume the Python script executes a simulation and dumps results in the
-  \textsc{SDDS} file format~\cite{borl:00}.
-Utility classed are used to parse the result data and fill the appropriate
-  structures returned to the optimizer algorithm.
+% \appendix
 
-\begin{code}[Simple Simulation Wrapper]
-#include <map>
-#include <string>
-#include <vector>
-
-#include "Util/Types.h"
-#include "Util/CmdArguments.h"
-#include "Simulation/Simulation.h"
-
-#include "boost/smart_ptr.hpp"
-
-class SimpleSimulation : public Simulation {
-
-public:
-
-    SimpleSimulation(Expressions::Named_t objectives,
-                     Expressions::Named_t constraints,
-                     Param_t params, std::string name, MPI_Comm comm,
-                     CmdArguments_t args);
-
-    ~SimpleSimulation();
-
-    /// Calls simulation through Python wrapper and returns when simulation
-    /// has either failed or finished.
-    void run() {
-        // user implements wrappers
-        prepare_input_file();
-        run_python_simulation();
-    }
-
-    /// Parse SDDS stat file and build up requested variable dictionary.
-    void collectResults(){
-
-        Expressions::Named_t::iterator it;
-        for(it = objectives_.begin(); it != objectives_.end(); it++) {
-
-            Expressions::Expr_t *objective = it->second;
-
-            // find out which variables we need in order to evaluate the
-            // objective
-            variableDictionary_t variable_dictionary;
-            std::set<std::string> req_vars = objective->getReqVars();
-
-            if(req_vars.size() != 0) {
-
-                boost::scoped_ptr<SDDSReader> sddsr(new SDDSReader(fn));
-
-                try {
-                    sddsr->parseFile();
-                } catch(OptPilotException &e) {
-                    std::cout << "Exception while parsing SDDS file: "
-                        << e.what() << std::endl;
-                    break;
-                }
-
-                // get all the required variable values from the stat file
-                foreach(std::string req_var, req_vars) {
-                    if(variable_dictionary.count(req_var) == 0) {
-
-                        try {
-                            double value = 0.0;
-                            sddsr->getValue(1 /*atTime*/, req_var, value);
-                            variable_dictionary.insert(
-                                std::pair<std::string, double>(req_var, value));
-                        } catch(OptPilotException &e) {
-                            std::cout << "Exception while getting value "
-                                      << "from SDDS file: " << e.what()
-                                      << std::endl;
-                        }
-                    }
-                }
-            }
-
-            // and evaluate the expression using the built dictionary of
-            // variable values
-            Expressions::Result_t result =
-                objective->evaluate(variable_dictionary);
-
-            std::vector<double> values;
-            values.push_back(boost::get<0>(result));
-            bool is_valid = boost::get<1>(result);
-
-            reqVarInfo_t tmps = {EVALUATE, values, is_valid};
-            requestedVars_.insert(
-                std::pair<std::string, reqVarInfo_t>(it->first, tmps));
-
-        }
-    }
-
-    /// returns container containing all requested variables with results
-    reqVarContainer_t getResults() { return requestedVars_; }
-
-private:
-
-    /// holds solutions returned to the optimizer
-    reqVarContainer_t requestedVars_;
-
-    Expressions::Named_t objectives_;
-    Expressions::Named_t constraints_;
-
-    MPI_Comm comm_;
-};
-
-#endif
-\end{code}
+%\section{Forward Solver Implementation}
+%
+%A simple implementation, e.g.\ using a Python forward solver, is given below
+%  in Listing 6.
+%We assume the Python script executes a simulation and dumps results in the
+%  \textsc{SDDS} file format~\cite{borl:00}.
+%Utility classed are used to parse the result data and fill the appropriate
+%  structures returned to the optimizer algorithm.
+%
+%\begin{code}[Simple Simulation Wrapper]
+%#include <map>
+%#include <string>
+%#include <vector>
+%
+%#include "Util/Types.h"
+%#include "Util/CmdArguments.h"
+%#include "Simulation/Simulation.h"
+%
+%#include "boost/smart_ptr.hpp"
+%
+%class SimpleSimulation : public Simulation {
+%
+%public:
+%
+%    SimpleSimulation(Expressions::Named_t objectives,
+%                     Expressions::Named_t constraints,
+%                     Param_t params, std::string name, MPI_Comm comm,
+%                     CmdArguments_t args);
+%
+%    ~SimpleSimulation();
+%
+%    /// Calls simulation through Python wrapper and returns when simulation
+%    /// has either failed or finished.
+%    void run() {
+%        // user implements wrappers
+%        prepare_input_file();
+%        run_python_simulation();
+%    }
+%
+%    /// Parse SDDS stat file and build up requested variable dictionary.
+%    void collectResults(){
+%
+%        Expressions::Named_t::iterator it;
+%        for(it = objectives_.begin(); it != objectives_.end(); it++) {
+%
+%            Expressions::Expr_t *objective = it->second;
+%
+%            // find out which variables we need in order to evaluate the
+%            // objective
+%            variableDictionary_t variable_dictionary;
+%            std::set<std::string> req_vars = objective->getReqVars();
+%
+%            if(req_vars.size() != 0) {
+%
+%                boost::scoped_ptr<SDDSReader> sddsr(new SDDSReader(fn));
+%
+%                try {
+%                    sddsr->parseFile();
+%                } catch(OptPilotException &e) {
+%                    std::cout << "Exception while parsing SDDS file: "
+%                        << e.what() << std::endl;
+%                    break;
+%                }
+%
+%                // get all the required variable values from the stat file
+%                foreach(std::string req_var, req_vars) {
+%                    if(variable_dictionary.count(req_var) == 0) {
+%
+%                        try {
+%                            double value = 0.0;
+%                            sddsr->getValue(1 /*atTime*/, req_var, value);
+%                            variable_dictionary.insert(
+%                                std::pair<std::string, double>(req_var, value));
+%                        } catch(OptPilotException &e) {
+%                            std::cout << "Exception while getting value "
+%                                      << "from SDDS file: " << e.what()
+%                                      << std::endl;
+%                        }
+%                    }
+%                }
+%            }
+%
+%            // and evaluate the expression using the built dictionary of
+%            // variable values
+%            Expressions::Result_t result =
+%                objective->evaluate(variable_dictionary);
+%
+%            std::vector<double> values;
+%            values.push_back(boost::get<0>(result));
+%            bool is_valid = boost::get<1>(result);
+%
+%            reqVarInfo_t tmps = {EVALUATE, values, is_valid};
+%            requestedVars_.insert(
+%                std::pair<std::string, reqVarInfo_t>(it->first, tmps));
+%
+%        }
+%    }
+%
+%    /// returns container containing all requested variables with results
+%    reqVarContainer_t getResults() { return requestedVars_; }
+%
+%private:
+%
+%    /// holds solutions returned to the optimizer
+%    reqVarContainer_t requestedVars_;
+%
+%    Expressions::Named_t objectives_;
+%    Expressions::Named_t constraints_;
+%
+%    MPI_Comm comm_;
+%};
+%
+%#endif
+%\end{code}
 
 
 
